--- a/frontend/src/html/index.html
+++ b/frontend/src/html/index.html
@@ -134,6 +134,7 @@
 
 	<main>
 		<div class="game-container">
+			<p id="turnDisplay"> <span id="activePlayer"></span>'s move</p>
 			<div class="chessboard" id="Board"></div>
 
 			<div id="promotionOptions" class="options">
@@ -197,8 +198,8 @@
 			<div id="botGameModal" class="modal hidden">
 				<div class="modal-content">
 					<p>Are you sure you want to a new bot game?</p>
-					<button id="confirmBotButton" class="confirmButton">Yes</button>
-					<button id="cancelBotButton" class="cancelButton">Cancel</button>
+					<button id="confirmBotButton" class="confirmButton board-button">Yes</button>
+					<button id="cancelBotButton" class="cancelButton board-button">Cancel</button>
 				</div>
 			</div>
 
@@ -206,8 +207,8 @@
 			<div id="checkmateModal" class="modal hidden">
 				<div class="modal-content">
 					<p id="winnerText">Checkmate! <span id="winnerName"></span> wins!</p>
-					<button id="playAgainButton">Play Again</button>
-					<button id="saveGameButton">Save Game</button>
+					<button id="playAgainButton" class="board-button">Play Again</button>
+					<button id="saveGameButton" class="board-button">Save Game</button>
 				</div>
 			</div>
 		</div>
