--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
 			<div id="botGameModal" class="modal hidden">
 				<div class="modal-content">
 					<p>Are you sure you want to a new PvB game?</p>
-					<button id="confirmBotButton" class="confirmButton board-button">Yes</button>
-					<button id="cancelBotButton" class="cancelButton board-button">Cancel</button>
+					<button id="confirmBotButton" class="confirmButton">Yes</button>
+					<button id="cancelBotButton" class="cancelButton">Cancel</button>
 				</div>
 			</div>
 
