--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 					</svg>
 				</button>
 
-				<button class="board-button" onclick="newGame(game.gameType)">
+				<button class="board-button" onclick="newGame(game.gameMode)">
 					<svg xmlns=" http://www.w3.org/2000/svg" viewBox="0 0 448 512">
 						<path fill="currentColor"
 							d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z">
@@ -189,18 +189,22 @@
 			<!--! Play pvp game Modal -->
 			<div id="pvpGameModal" class="modal hidden">
 				<div class="modal-content">
-					<p>Are you sure you want to a new PvP game?</p>
-					<button id="confirmPvPButton" class="confirmButton">Yes</button>
+					<p>Start a new PvP game:</p>
+					<button id="pvpClassicButton" class="confirmButton">Play Classic</button>
+					<button id="pvpElementalButton" class="confirmButton">Play Elemental</button>
 					<button id="cancelPvPButton" class="cancelButton">Cancel</button>
+
 				</div>
 			</div>
 
 			<!--! Play bot game Modal -->
 			<div id="botGameModal" class="modal hidden">
 				<div class="modal-content">
-					<p>Are you sure you want to a new PvB game?</p>
-					<button id="confirmBotButton" class="confirmButton">Yes</button>
+					<p>Start a new Bot game:</p>
+					<button id="botClassicButton" class="confirmButton">Play Classic</button>
+					<button id="botElementalButton" class="confirmButton">Play Elemental</button>
 					<button id="cancelBotButton" class="cancelButton">Cancel</button>
+
 				</div>
 			</div>
 
