Restyled modal buttons

--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 			<div id="pvpGameModal" class="modal hidden">
 				<div class="modal-content">
 					<p>Start a new PvP game:</p>
-					<button id="pvpClassicButton" class="confirmButton">Play Classic</button>
-					<button id="pvpElementalButton" class="confirmButton">Play Elemental</button>
-					<button id="cancelPvPButton" class="cancelButton">Cancel</button>
+					<button id="pvpClassicButton" class="button btn-classic">Play Classic</button>
+					<button id="pvpElementalButton" class="button btn-elemental">Play Elemental</button>
+					<button id="cancelPvPButton" class="button btn-cancel">Cancel</button>
 
 				</div>
 			</div>
@@ -201,9 +201,9 @@
 			<div id="botGameModal" class="modal hidden">
 				<div class="modal-content">
 					<p>Start a new Bot game:</p>
-					<button id="botClassicButton" class="confirmButton">Play Classic</button>
-					<button id="botElementalButton" class="confirmButton">Play Elemental</button>
-					<button id="cancelBotButton" class="cancelButton">Cancel</button>
+					<button id="botClassicButton" class="button btn-classic">Play Classic</button>
+					<button id="botElementalButton" class="button btn-elemental">Play Elemental</button>
+					<button id="cancelBotButton" class="button btn-cancel">Cancel</button>
 
 				</div>
 			</div>
@@ -212,7 +212,7 @@
 			<div id="checkmateModal" class="modal hidden">
 				<div class="modal-content">
 					<p id="winnerText">Checkmate! <span id="winnerName"></span> wins!</p>
-					<button id="playAgainButton" class="confirmButton">Play Again</button>
+					<button id="playAgainButton" class="button btn-elemental">Play Again</button>
 				</div>
 			</div>
 
@@ -276,7 +276,7 @@
 					</div>
 
 
-					<button id="closeRulesButton" class="cancelButton">Close</button>
+					<button id="closeRulesButton" class="button btn-cancel">Close</button>
 				</div>
 			</div>
 
