Remade the bot class

--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
 
 	<script src="src/js/navbar.js"></script>
 
-	<script src="src/js/chessBoard.js"></script>
-	<script src="src/js/chessBot.js"></script>
-	<script src="src/js/chessGame.js"></script>
+	<script src="src/js/board.js"></script>
+	<script src="src/js/bot.js"></script>
+	<script src="src/js/game.js"></script>
 
 	<script src="src/js/modal.js"></script>
 	<script src="src/js/main.js"></script>
